## * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
## * This source file is part of SableVM.                            *
## *                                                                 *
## * See the file "LICENSE" for the copyright information and for    *
## * the terms and conditions for copying, distribution and          *
## * modification of this source file.                               *
## * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *

DIST_SUBDIRS = include libffi libpopt libsablevm sablevm

SUBDIRS = include 

if CONV_LIBFFI
SUBDIRS += libffi
endif

if CONV_LIBPOPT
SUBDIRS += libpopt
endif

SUBDIRS += libsablevm sablevm
